# plot-finder

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test.py
ai/: index.html
air/: index.html
analyzer/: index.html
api/: index.html
climate/: index.html
docs/: ai.md  air.md  analyzer.md  api.md  climate.md  errors.md  gugik.md  index.md  mpzp.md  noise.md  place.md  plot.md  report.md  risks.md  sun.md  visualizer.md
errors/: index.html
gugik/: index.html
mpzp/: index.html
noise/: index.html
place/: index.html
plot/: index.html
plot_finder/: __init__.py  ai.py  air.py  analyzer.py  climate.py  exceptions.py  gugik.py  mpzp.py  noise.py  place.py  plot.py  report.py  risks.py  sun.py  visualizer.py
report/: index.html
risks/: index.html
search/: search_index.json
sun/: index.html
visualizer/: index.html
