[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plot-finder"
version = "0.1.0"
description = "Query Polish ULDK (GUGiK) API to find land parcels by TERYT ID or coordinates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ernest Ilchenko" },
]
keywords = ["uldk", "gugik", "parcel", "plot", "geodesy", "poland", "teryt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24",
    "shapely>=2.0",
    "pyproj>=3.6",
    "astral>=3.2",
]

[project.optional-dependencies]
viz = ["folium>=0.14", "Pillow>=9.0"]
ai = ["openai>=1.0"]

[tool.setuptools.packages.find]
include = ["plot_finder*"]

[project.urls]
Homepage = "https://github.com/ernestilchenko/plot-finder"
